功能优化：增强社交领域的内容与媒体处理能力 升级 IContentService 接口：将 publish 方法的返回类型改为 OperationResultVO，并为 syncDraft 方法新增 mediaIds 参数以支持媒体 ID 同步。 完善 RelationService 接口文档：为关注（follow）、好友请求（friendRequest）、好友决策（friendDecision）、拉黑（block）及群组管理（manageGroup）方法补充详细 JavaDoc 注释。 引入媒体存储依赖：在 pom.xml 中添加 MinIO 依赖以实现媒体文件存储功能。 调整 ContentRepository：适配草稿操作中 mediaIds 参数的处理逻辑。 扩展 ContentDraftPO 实体：新增 mediaIds 字段，用于存储草稿内容关联的媒体 ID。 更新 ContentDraftMapper.xml：在 SQL 操作中新增 mediaIds 字段的读写逻辑。 重构 ContentController：适配服务层方法签名的变更。 新增 RedisClientConfig 配置类：实现 Redisson 客户端的配置管理。 定义 IMediaStoragePort 接口：规范媒体上传会话生成的接口标准。 实现 MinIO 媒体存储端口：基于 MinIO 开发 MediaStoragePort，完成媒体上传会话的具体实现。 添加 MinioMediaProperties 配置类：封装 MinIO 服务的配置项（如端点、密钥、桶名等）。